# docsrs-mcp

./: Cargo.toml  flake.nix
src/: docs_fetcher.rs  main.rs  rustdoc_parser.rs  server.rs
src/rustdoc_parser/: mod.rs  v46.rs  v48.rs  v49.rs  v50.rs  v51.rs  v52.rs  v53.rs  version.rs
src/tools/: lookup_crate.rs  lookup_item.rs  mod.rs  search_crates.rs
