[package]
name = "docsrs-mcp"
version = "0.1.0"
edition = "2021"
authors = ["MCP Docs.rs Contributors"]
description = "MCP server for accessing Rust crate documentation via docs.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/modelcontextprotocol/docsrs-mcp"
keywords = ["mcp", "rust", "docs", "documentation", "crates"]
categories = ["development-tools", "api-bindings"]

[dependencies]
# MCP SDK with server features
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", features = ["server", "transport-io", "macros", "schemars"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for docs.rs API with automatic decompression
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "deflate", "brotli", "stream", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Rustdoc types for parsing
rustdoc-types = { path = "../rustdoc-types" }

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# URL parsing
url = "2"
urlencoding = "2"

# Fuzzy string matching for search suggestions
strsim = "0.11"

# JSON Schema generation
schemars = "0.8"
