[package]
name = "docsrs-mcp"
version = "0.1.0"
edition = "2021"
authors = ["MCP Docs.rs Contributors"]
description = "MCP server for accessing Rust crate documentation via docs.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/modelcontextprotocol/docsrs-mcp"
keywords = ["mcp", "rust", "docs", "documentation", "crates"]
categories = ["development-tools", "api-bindings"]

[dependencies]
# MCP SDK with server features
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", features = ["server", "transport-io", "macros", "schemars"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for docs.rs API with automatic decompression
reqwest = { version = "0.12", default-features = false, features = ["json", "zstd", "rustls-tls", "http2"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Rustdoc types for different format versions (from crates.io)
rustdoc-types-v53 = { package = "rustdoc-types", version = "0.53" }
rustdoc-types-v52 = { package = "rustdoc-types", version = "0.52" }
rustdoc-types-v51 = { package = "rustdoc-types", version = "0.51" }
rustdoc-types-v50 = { package = "rustdoc-types", version = "0.50" }
rustdoc-types-v49 = { package = "rustdoc-types", version = "0.49" }
rustdoc-types-v48 = { package = "rustdoc-types", version = "0.48" }
rustdoc-types-v46 = { package = "rustdoc-types", version = "0.46.1" }

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# URL encoding
urlencoding = "2"

# JSON Schema generation
schemars = "0.8"
